<?xml version="1.0" encoding="utf-8"?>
<com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical">
    <com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_heightPercent="45%"
        android:background="@color/white"
        app:layout_widthPercent="70%">
        <com.ty.highway.frameworklibrary.support.percent.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_heightPercent="10%">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_taskdetails"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/common_margin"
                android:textColor="@color/black"
                app:layout_textSizePercent="50%" />

        </com.ty.highway.frameworklibrary.support.percent.PercentRelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1.0dp"
            android:background="@color/common_theme_color"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/common_margin"
            android:background="@color/main_bg_color"
            >
            <com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/common_margin"
                    android:gravity="center"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_code_text"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        />
                    <TextView
                        android:id="@+id/activity_taskdetails_checkno"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="00000"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        />
                </com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout>
                <com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/common_margin"
                    android:gravity="center"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tunnel_name_text"
                        android:textColor="@color/black"
                        />
                    <TextView
                        android:id="@+id/activity_taskdetails_tunnelname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:singleLine="true"
                        android:text="00000"
                        />
                    <TextView
                        android:id="@+id/activity_taskdetails_look"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:textColor="@color/common_theme_color"
                        android:singleLine="true"
                        android:text="点击查看详情"
                        />
                </com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout>
                <com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/common_margin"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/section_name_text"
                        android:textColor="@color/black"
                        />
                    <TextView
                        android:id="@+id/activity_taskdetails_section_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="00000"
                        android:singleLine="true"
                        />
                </com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout>
                <com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/common_margin"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_range_text"
                        android:textColor="@color/black"
                        />
                    <TextView
                        android:id="@+id/activity_taskdetails_check_range"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="00000"
                        android:singleLine="true"
                        />
                </com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout>
                <com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/common_margin"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_type_text"
                        android:textColor="@color/black"

                        />
                    <TextView
                        android:id="@+id/activity_taskdetails_check_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="00000"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        />
                </com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout>




                <com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/common_margin"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_date_text"
                        android:textColor="@color/black"
                        />
                    <TextView
                        android:id="@+id/activity_taskdetails_check_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="00000"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        />
                </com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout>
                <com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/common_margin"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_weather_text"
                        android:textColor="@color/black"
                        />
                    <TextView
                        android:id="@+id/activity_taskdetails_check_weather"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="00000"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        />
                </com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout>
                <com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/common_margin"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/check_staff_text"
                        />
                    <TextView
                        android:id="@+id/activity_taskdetails_check_staff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:singleLine="true"
                        android:text="00000"
                        />
                </com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout>
                    android:background="@color/black"/>
                <com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/common_margin"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/enter_staff_text"
                        android:textColor="@color/black"
                        />
                    <TextView
                        android:id="@+id/activity_taskdetails_enter_staff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="00000"
                        android:singleLine="true"
                        />
                </com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout>
                <com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/common_margin"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/organize_text"
                        android:textColor="@color/black"
                        />
                    <TextView
                        android:id="@+id/activity_taskdetails_organize"
                        android:layout_width="wrap_content"
                        android:textColor="@color/black"
                        android:layout_height="wrap_content"
                        android:text="00000"
                        android:singleLine="true"
                        />
                </com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout>
            </com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout>
        </ScrollView>
    </com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout>
</com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout>