<?xml version="1.0" encoding="utf-8"?>
<com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_bg_color"
    android:orientation="vertical">

    <include
        layout="@layout/common_titlebar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/circle_bg"
        android:orientation="vertical">

        <com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:layout_heightPercent="8%"
            android:gravity="center"
            >
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tunnel_code"
                app:layout_textSizePercent="35%"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/activity_tunneldetails_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00000"
                android:singleLine="true"
                app:layout_textSizePercent="35%"
                android:textColor="@color/black"
                />
        </com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/black"/>
        <com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            app:layout_heightPercent="8%"

            android:layout_marginRight="10dp"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tunnel_name"
                app:layout_textSizePercent="35%"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/activity_tunneldetails_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_textSizePercent="35%"
                android:textColor="@color/black"
                android:singleLine="true"
                android:text="00000"
                />

        </com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/black"/>
        <com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginRight="10dp"
            app:layout_heightPercent="8%"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tunnel_road"
                app:layout_textSizePercent="35%"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/activity_tunneldetails_road"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_textSizePercent="35%"
                android:textColor="@color/black"
                android:text="00000"
                android:singleLine="true"
                />
        </com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/black"/>
        <com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_heightPercent="8%"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tunnel_start"
                app:layout_textSizePercent="35%"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/activity_tunneldetails_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_textSizePercent="35%"
                android:textColor="@color/black"
                android:text="00000"
                android:singleLine="true"
                />
        </com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/black"/>
        <com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_heightPercent="8%"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tunnel_end"  app:layout_textSizePercent="35%"
                android:textColor="@color/black"

                />
            <TextView
                android:id="@+id/activity_tunneldetails_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00000"
                android:singleLine="true"
                app:layout_textSizePercent="35%"
                android:textColor="@color/black"
                />
        </com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout>




        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/black"/>
        <com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_heightPercent="8%"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tunnel_length"
                app:layout_textSizePercent="35%"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/activity_tunneldetails_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00000"
                android:singleLine="true"
                app:layout_textSizePercent="35%"
                android:textColor="@color/black"
                />
        </com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/black"/>
        <com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_heightPercent="8%"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tunnel_width"
                app:layout_textSizePercent="35%"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/activity_tunneldetails_width"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00000"
                android:singleLine="true"
                app:layout_textSizePercent="35%"
                android:textColor="@color/black"
                />
        </com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/black"/>
        <com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_heightPercent="8%"

            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_textSizePercent="35%"
                android:textColor="@color/black"
                android:text="@string/tunnel_heigth"
                />
            <TextView
                android:id="@+id/activity_tunneldetails_heigth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_textSizePercent="35%"
                android:textColor="@color/black"
                android:singleLine="true"
                android:text="00000"
                />
        </com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/black"/>
        <com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_heightPercent="8%"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tunnel_completiondate"
                app:layout_textSizePercent="35%"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/activity_tunneldetails_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_textSizePercent="35%"
                android:textColor="@color/black"
                android:text="00000"
                android:singleLine="true"
                />
        </com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/black"/>
        <com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_heightPercent="8%"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tunnel_remarks"
                app:layout_textSizePercent="35%"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/activity_tunneldetails_remarks"
                android:layout_width="wrap_content"
                app:layout_textSizePercent="35%"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:text="00000"
                android:singleLine="true"
                />
        </com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout>
    </com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout>
</com.ty.highway.frameworklibrary.support.percent.PercentLinearLayout>